--- a/Client/app/src/main/res/layout/activity_chatting.xml
+++ b/Client/app/src/main/res/layout/activity_chatting.xml
@@ -16,7 +16,7 @@
         android:background="@null"
         android:divider="@null"
         android:stackFromBottom="true"
-        android:transcriptMode="alwaysScroll"/>
+        android:transcriptMode="alwaysScroll" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,6 +36,7 @@
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="1"
+            android:color="#ffea00"
             android:text="@string/send" />
 
     </LinearLayout>
