--- a/Client/app/src/main/res/layout/activity_main.xml
+++ b/Client/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:layout_centerHorizontal="true"
         android:hint="PassWord"
         android:id="@+id/PasswordInput"
-        android:text="jj"
+        android:text="j"
         android:layout_below="@id/IDInput"
         android:password="true" />
 
