--- a/Client/app/src/main/res/layout/activity_users.xml
+++ b/Client/app/src/main/res/layout/activity_users.xml
@@ -8,13 +8,16 @@
     android:orientation="vertical"
     tools:context=".UserListActivity">
 
+
     <ListView
         android:id="@+id/userlist"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@null"
-        android:divider="@null"
+        android:dividerHeight="1dp"
+        android:divider="#999999"
+        android:minHeight="40dp"
         android:transcriptMode="alwaysScroll"/>
 
 </LinearLayout>
